INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

SET(COMMON_CPP Builder.cpp EventTable.cpp InternalEvent.cpp Links.cpp
  Message.cpp Node.cpp Trace.cpp)

SET(COMMON_HPP Builder.hpp EventTable.hpp InternalEvent.hpp Links.hpp
  Message.hpp Node.hpp Time.hpp Trace.cpp)

ADD_LIBRARY(common SHARED ${COMMON_CPP};${COMMON_HPP})

SET_TARGET_PROPERTIES(common PROPERTIES ${PARADEVS_LIBRARY_PROPERTIES})
SET_TARGET_PROPERTIES(common PROPERTIES OUTPUT_NAME
  "paradevs-common-${PARADEVS_VERSION_SHORT}")

TARGET_LINK_LIBRARIES(common
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES})

INSTALL(TARGETS common
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${COMMON_HPP} DESTINATION ${PARADEVS_INCLUDE_DIRS}/common)