INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

SET(DTSS_CPP Coordinator.cpp Dynamics.cpp Simulator.cpp)

SET(DTSS_HPP Coordinator.hpp Dynamics.hpp Simulator.hpp)

ADD_LIBRARY(dtss SHARED ${DTSS_CPP};${DTSS_HPP})

SET_TARGET_PROPERTIES(dtss PROPERTIES ${PARADEVS_LIBRARY_PROPERTIES})
SET_TARGET_PROPERTIES(dtss PROPERTIES OUTPUT_NAME
  "paradevs-dtss-${PARADEVS_VERSION_SHORT}")

TARGET_LINK_LIBRARIES(dtss
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES})

INSTALL(TARGETS dtss
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${DTSS_HPP} DESTINATION ${PARADEVS_INCLUDE_DIRS}/dtss)