INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

SET(EXAMPLES_CPP Examples.cpp)

SET(EXAMPLES_HPP Examples.hpp)

ADD_LIBRARY(examples SHARED ${EXAMPLES_CPP};${EXAMPLES_HPP})

SET_TARGET_PROPERTIES(examples PROPERTIES ${PARADEVS_LIBRARY_PROPERTIES})
SET_TARGET_PROPERTIES(examples PROPERTIES OUTPUT_NAME
  "paradevs-examples${PARADEVS_VERSION_SHORT}")

TARGET_LINK_LIBRARIES(examples
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES})

INSTALL(TARGETS examples
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${EXAMPLES_HPP} DESTINATION ${PARADEVS_INCLUDE_DIRS}/examples)