INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

SET(EXAMPLES_CPP devs_examples.cpp)

SET(EXAMPLES_HPP devs_examples.hpp)

ADD_LIBRARY(examples SHARED ${EXAMPLES_CPP};${EXAMPLES_HPP})

SET_TARGET_PROPERTIES(examples PROPERTIES ${PARADEVS_LIBRARY_PROPERTIES})
SET_TARGET_PROPERTIES(examples PROPERTIES OUTPUT_NAME
  "paradevs-examples${PARADEVS_VERSION_SHORT}")

TARGET_LINK_LIBRARIES(examples
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES})

INSTALL(TARGETS examples
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

INSTALL(FILES ${EXAMPLES_HPP} DESTINATION ${PARADEVS_INCLUDE_DIRS}/examples)

# tests
ADD_EXECUTABLE(pdevs-tests pdevs_tests.hpp pdevs_tests.cpp)
SET_TARGET_PROPERTIES(pdevs-tests PROPERTIES ${PARADEVS_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(pdevs-tests
  common pdevs
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARY})
