INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

# pdevs tests
ADD_EXECUTABLE(pdevs-tests ${COMMON_HPP} ${PDEVS_HPP} pdevs_tests.hpp
  pdevs_tests.cpp)
SET_TARGET_PROPERTIES(pdevs-tests PROPERTIES ${PARADEVS_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(pdevs-tests
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARY})

# dtss tests
ADD_EXECUTABLE(dtss-tests ${COMMON_HPP} ${DTSS_HPP} dtss_tests.hpp
  dtss_tests.cpp)
SET_TARGET_PROPERTIES(dtss-tests PROPERTIES ${PARADEVS_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(dtss-tests
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARY})

# mixed tests
ADD_EXECUTABLE(mixed-tests ${COMMON_HPP} ${DTSS_HPP} ${PDEVS_HPP}
  mixed_tests.hpp mixed_tests.cpp)
SET_TARGET_PROPERTIES(mixed-tests PROPERTIES ${PARADEVS_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(mixed-tests
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${Boost_FILESYSTEM_LIBRARY})
