INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

ADD_EXECUTABLE(pdevs-multithreading-tests ${COMMON_HPP} ${COMMON_SCHEDULER_HPP}
  ${PDEVS_HPP} ${PDEVS_MULTITHREADING_HPP} graph_manager.hpp tests.cpp)
SET_TARGET_PROPERTIES(pdevs-multithreading-tests PROPERTIES
  ${PARADEVS_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(pdevs-multithreading-tests
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES})