INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

SET(PDEVS_MULTITHREADING_HPP Coordinator.hpp)

INSTALL(FILES ${PDEVS_MULTITHREADING_HPP} DESTINATION
  ${PARADEVS_INCLUDE_DIRS}/pdevs/multithreading)